Services list added

--- a/src/app/dashboard/add-doctor/add-doctor.component.html
+++ b/src/app/dashboard/add-doctor/add-doctor.component.html
@@ -9,7 +9,7 @@
           type="text"
           class="form-control"
           id="Name"
-          description="name"
+          name="name"
           [(ngModel)]="name"
         />
         <label for="name">Doctor's Name</label>
@@ -19,7 +19,7 @@
           type="text"
           class="form-control"
           id="Photo"
-          description="photo"
+          name="photo"
           [(ngModel)]="photo"
         />
         <label for="photo">Photo Link</label>
@@ -29,7 +29,7 @@
           type="text"
           class="form-control"
           id="Degree"
-          description="degree"
+          name="degree"
           [(ngModel)]="degree"
         />
         <label for="degree">Degree</label>
@@ -39,7 +39,7 @@
           type="text"
           class="form-control"
           id="Hospital"
-          description="hospital"
+          name="hospital"
           [(ngModel)]="hospital"
         />
         <label for="hospital">Hospital Name</label>
@@ -49,7 +49,7 @@
           type="email"
           class="form-control"
           id="Email"
-          description="email"
+          name="email"
           [(ngModel)]="email"
         />
         <label for="email">Email address</label>
@@ -59,7 +59,7 @@
           type="text"
           class="form-control"
           id="Mobile"
-          description="mobile"
+          name="mobile"
           [(ngModel)]="mobile"
         />
         <label for="mobile">Mobile</label>
