--- a/src/app/dashboard/add-medi-service/add-medi-service.component.html
+++ b/src/app/dashboard/add-medi-service/add-medi-service.component.html
@@ -13,7 +13,7 @@
           type="text"
           class="form-control"
           id="Name"
-          description="name"
+          name="name"
           [(ngModel)]="service_name"
         />
         <label for="name">Medi Service Name</label>
@@ -23,7 +23,7 @@
           type="text"
           class="form-control"
           id="Photo"
-          description="photo"
+          name="photo"
           [(ngModel)]="photo"
         />
         <label for="photo">Photo Link</label>
@@ -33,7 +33,7 @@
           type="email"
           class="form-control"
           id="discription"
-          description="description"
+          name="description"
           [(ngModel)]="description"
         />
         <label for="discription">Description</label>
@@ -43,7 +43,7 @@
           type="text"
           class="form-control"
           id="Price"
-          description="price"
+          name="price"
           [(ngModel)]="price"
         />
         <label for="price">Price</label>
