--- a/src/app/dashboard/add-review/add-review.component.html
+++ b/src/app/dashboard/add-review/add-review.component.html
@@ -1,27 +1,62 @@
-<div class="container ">
+<div class="container">
   <div class="col-lg mx-auto">
-    <form class="card border-0 shadow p-3" #reviewForm="ngForm" (ngSubmit)="reviewSubmit(reviewForm)">
+    <form
+      class="card border-0 shadow p-3"
+      #reviewForm="ngForm"
+      (ngSubmit)="reviewSubmit(reviewForm)"
+    >
       <div class="form-floating mb-3 tetx-center">
         <h3 class="text-center text-warning">Add Review</h3>
       </div>
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="firstName" description="firstname" [(ngModel)]="name">
+        <input
+          type="text"
+          class="form-control"
+          id="firstName"
+          description="firstname"
+          name="name"
+          [(ngModel)]="name"
+        />
         <label for="firstname"> Name</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="email" description="email" [(ngModel)]="email">
+        <input
+          type="email"
+          class="form-control"
+          id="email"
+          description="email"
+          name="email"
+          [(ngModel)]="email"
+        />
         <label for="email">Email</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="Photo" description="photo" [(ngModel)]="photo">
+        <input
+          type="text"
+          class="form-control"
+          id="Photo"
+          description="photo"
+          name="photo"
+          [(ngModel)]="photo"
+        />
         <label for="photo">Photo Link</label>
       </div>
       <div class="form-floating mb-3">
-        <textarea class="form-control" rows="5" id="mobile" description="mobile" [(ngModel)]="review"></textarea>
+        <textarea
+          class="form-control"
+          rows="5"
+          id="mobile"
+          description="mobile"
+          name="review"
+          [(ngModel)]="review"
+        ></textarea>
         <label for="mobile">Review</label>
       </div>
-      <input type="submit" value="submit" class="form-control btn btn-primary" />
+      <input
+        type="submit"
+        value="submit"
+        class="form-control btn btn-primary"
+      />
     </form>
-
   </div>
 </div>
