--- a/src/app/dashboard/best-doctor/best-doctor.component.html
+++ b/src/app/dashboard/best-doctor/best-doctor.component.html
@@ -4,7 +4,13 @@
   <div class="row">
     <div class="col-lg-3 card" *ngFor="let doctor of Doctors.slice(0, 4)">
       <div class="py-3">
-        <img class="img-fluid" src="{{ doctor.photo }}" alt="" height="300px" width="300px" />
+        <img
+          class="img-fluid"
+          src="{{ doctor.photo }}"
+          alt=""
+          height="300px"
+          width="300px"
+        />
       </div>
       <div>
         <h5>{{ doctor.name }}</h5>
@@ -12,7 +18,9 @@
         <p>{{ doctor.hospital }}</p>
       </div>
       <div class="card my-2">
-        <button class="btn btn-success" (click)="openModal(doctor)">Appointment Now</button>
+        <button class="btn btn-success" (click)="openModal(doctor)">
+          Appointment Now
+        </button>
       </div>
     </div>
   </div>
