--- a/src/app/dashboard/appoinment-list/appoinment-list.component.html
+++ b/src/app/dashboard/appoinment-list/appoinment-list.component.html
@@ -1,1 +1,33 @@
-<p>appoinment-list works!</p>
+
+<div class="container">
+    <table class="table table-dark table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Patient Name</th>
+          <th scope="col">Age</th>
+          <th scope="col">Mobile</th>
+          <th scope="col">Time</th>
+          <th scope="col">Data</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr scope="col table-secondary" *ngFor="let appointment of appointments">
+          <td class="table-secondary">{{ appointment.patient_name }}</td>
+          <td class="table-secondary">{{ appointment.age }}</td>
+          <td class="table-secondary">{{ appointment.mobile }}</td>
+          <td class="table-secondary">{{ appointment.time }}</td>
+          <td class="table-secondary">{{ appointment.data }}</td>
+          <td class="table-secondary">
+            <button class="btn btn-danger mx-1" (click)="deleteAppointment(appointment)">
+              Delete
+            </button>
+            <button class="btn btn-primary mx-1" (click)="openModal(appointment)">
+              Update
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
