--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -8,8 +8,8 @@
                 <button (click)="sendReview()" class="btn btn-secondary p-1 mb-1">Send Review</button>
                 <button (click)="doctorList()" class="btn btn-secondary p-1 mb-1">Doctor List</button>
                 <button (click)="mediServicesList()" class="btn btn-secondary p-1 mb-1">Medi Services List</button>
-                <button class="btn btn-secondary p-1 mb-1">Order List</button>
-                <button class="btn btn-secondary p-1 mb-1">Appointment List</button>
+                <button (click)="orderList()" class="btn btn-secondary p-1 mb-1">Order List</button>
+                <button (click)="appointmentList()" class="btn btn-secondary p-1 mb-1">Appointment List</button>
                 <button class="btn btn-secondary p-1 mb-1">Payment</button>
             </div>
         </div>
@@ -19,9 +19,9 @@
             <app-add-review *ngSwitchCase="'review'"></app-add-review>
             <app-doctor-list *ngSwitchCase="'doctorList'"></app-doctor-list>
             <app-medi-services-list *ngSwitchCase="'mediServicesList'"></app-medi-services-list>
+            <app-order-list *ngSwitchCase="'orderList'"></app-order-list>
+            <app-appoinment-list *ngSwitchCase="'appointmentList'"></app-appoinment-list>
+            
         </div>
     </div>
 </div>
-<!-- <app-add-medi-service></app-add-medi-service>
-<app-add-doctor></app-add-doctor>
-<app-add-review></app-add-review> -->
