--- a/src/app/dashboard/appointment-list-modal/appointment-list-modal.component.html
+++ b/src/app/dashboard/appointment-list-modal/appointment-list-modal.component.html
@@ -1,1 +1,78 @@
-<p>appointment-list-modal works!</p>
+<div class="container">
+    <div class="col">
+      <form class="card border-0 shadow p-3" #appointmentForm="ngForm">
+        <div class="form-floating mb-3 tetx-center">
+          <h3 class="text-center text-warning">Appointment Now</h3>
+        </div>
+        <input type="hidden" name="id" [(ngModel)]="appointment.id" />
+        <div class="form-floating mb-3">
+          <input
+            type="text"
+            class="form-control"
+            id="Name"
+            name="name"
+            [(ngModel)]="appointment.patient_name"
+          />
+          <label for="name">Patient name</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input
+            type="text"
+            class="form-control"
+            id="Age"
+            name="age"
+            [(ngModel)]="appointment.age"
+          />
+          <label for="age">Age</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input
+            type="text"
+            class="form-control"
+            id="Address"
+            name="address"
+            [(ngModel)]="appointment.address"
+          />
+          <label for="address">Address</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input
+            type="text"
+            class="form-control"
+            id="Problem"
+            name="problem"
+            [(ngModel)]="appointment.problem"
+          />
+          <label for="problem">Problem</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input
+            type="time"
+            class="form-control"
+            id="Time"
+            name="time"
+            [(ngModel)]="appointment.time"
+          />
+          <label for="time">Time</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input
+            type="date"
+            class="form-control"
+            id="Date"
+            name="data"
+            [(ngModel)]="appointment.data"
+          />
+          <label for="data">Date</label>
+        </div>
+        <button
+          type="button"
+          class="btn btn-outline-success"
+          (click)="updateAppointment()"
+        >
+          Update Appointment
+        </button>
+      </form>
+    </div>
+  </div>
+  
