Auth guard  added

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -54,14 +54,14 @@
         </li>
       </ul>
       <div class="d-flex align-items-center">
-        <h6 className="text-light">Medicare user</h6>
+        <!-- <h6 className="text-light">Medicare user</h6> -->
         <a routerLink="/login">
           <button class="btn btn-primary mx-1">Login</button>
         </a>
         <a routerLink="/register">
           <button class="btn btn-primary mx-1">Register</button>
         </a>
-        <button class="btn btn-primary mx-1">Logout</button>
+        <button (click)="logout()" class="btn btn-primary mx-1">Logout</button>
       </div>
     </div>
   </div>
