images size added

--- a/src/app/dashboard/best-services/best-services.component.html
+++ b/src/app/dashboard/best-services/best-services.component.html
@@ -3,7 +3,7 @@
     <hr>
     <div class="row">
         <div class="col-lg-4 card" *ngFor="let medi of medi_services.slice(0, 3)">
-            <div class="py-3">
+            <div class="py-3 img-fluid" style="height: 300px; width: 415px;">
                 <img class="img-fluid" src="{{medi.photo}}" alt="" height="300px" width="415px">
             </div>
             <div>
