--- a/src/app/dashboard/all-doctor/all-doctor.component.html
+++ b/src/app/dashboard/all-doctor/all-doctor.component.html
@@ -2,7 +2,7 @@
   <h1 class="text-center">Our All Doctors</h1>
   <div class="row">
     <div class="col-lg-3 card" *ngFor="let doctor of Doctors">
-      <div class="py-3">
+      <div class="py-3 img-fluid" style="height: 300px; width: 300px;">
         <img class="img-fluid" src="{{doctor.photo}}" alt="" height="300px" width="300px">
       </div>
       <div>
