--- a/src/app/dashboard/best-doctor/best-doctor.component.html
+++ b/src/app/dashboard/best-doctor/best-doctor.component.html
@@ -3,7 +3,7 @@
   <hr />
   <div class="row">
     <div class="col-lg-3 card" *ngFor="let doctor of Doctors.slice(0, 4)">
-      <div class="py-3">
+      <div class="py-3 img-fluid" style="height: 300px; width: 300px;">
         <img
           class="img-fluid"
           src="{{ doctor.photo }}"
