Doctor name added

--- a/src/app/dashboard/all-doctor/all-doctor.component.html
+++ b/src/app/dashboard/all-doctor/all-doctor.component.html
@@ -11,7 +11,7 @@
         <p>{{doctor.hospital}}</p>
 
         <div class="card my-2">
-          <button class="btn btn-success" (click)="openModal(doctor)">Appointment Now</button>
+          <button class="btn btn-success" (click)="openModal(doctor.name)">Appointment Now</button>
         </div>
 
       </div>
