--- a/src/app/dashboard/appointment-modal/appointment-modal.component.html
+++ b/src/app/dashboard/appointment-modal/appointment-modal.component.html
@@ -10,6 +10,17 @@
           class="form-control"
           id="Name"
           name="name"
+          value="{{doctorName}}"
+          readonly
+        />
+        <label for="name">Doctor name</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control"
+          id="Name"
+          name="name"
           [(ngModel)]="patient_name"
         />
         <label for="name">Patient name</label>
