--- a/src/app/dashboard/best-doctor/best-doctor.component.html
+++ b/src/app/dashboard/best-doctor/best-doctor.component.html
@@ -18,7 +18,7 @@
         <p>{{ doctor.hospital }}</p>
       </div>
       <div class="card my-2">
-        <button class="btn btn-success" (click)="openModal(doctor)">
+        <button class="btn btn-success" (click)="openModal(doctor.name)">
           Appointment Now
         </button>
       </div>
