--- a/src/app/dashboard/all-medi-services/all-medi-services.component.html
+++ b/src/app/dashboard/all-medi-services/all-medi-services.component.html
@@ -11,7 +11,7 @@
           </div>
           <div class="card border-0">
             <h3>Price: {{medi.price}} Taka</h3>
-              <button class="btn btn-primary my-3 " (click)="openModal(medi)">Book Now</button>
+              <button class="btn btn-primary my-3 " (click)="openModal(medi.service_name)">Book Now</button>
           </div>
       </div>
   </div>
