--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row" >
-        <div class="col-md-2 card  text-center" style="height: 100vh;">
+        <div class="col-md-2 card border-0 text-center" style="height: 100vh;">
             <h3 class=" p-3">Dashboard</h3>
             <div class="card border-0">
                 <button (click)="addDoctor()" class="btn btn-secondary p-1 mb-1">Add Doctor</button>
